# python.hobbyrpc

./: README.md  pyproject.toml  some.py
examples/: auth_rpc.py  bare_rpc.py  cors_rpc.py  cors_with_restricted_origins_rpc.py  echo_rpc.py  pydantic_rpc.py  werkzeug_app.py  werkzeug_json.py
src/hobbyrpc/: __init__.py
src/hobbyrpc/client/: __init__.py  call.py  exceptions.py  unix.py
src/hobbyrpc/server/: __init__.py  auth.py  call.py  cors.py  exceptions.py  fun.py  logger.py  options.py  post.py  to_json.py
src/hobbyrpc/server/fun/: __init__.py  call.py  json.py
tests/: conftest.py
tests/Client/: conftest.py  test_auth.py  test_coffeerpc.py  test_import.py  test_nullary.py  test_tcp_server.py  test_unary.py
tests/Client/fixtures/: coffeerpc_server.py  coffeerpc_server_with_auth.py
tests/Server/: test_auth.py  test_bare.py  test_cors.py  test_echo.py  test_pydantic.py  test_werkzeug.py
tests/Server/fixtures/: rpc_examples.py  werkzeug_app.py
tests/fixtures/: coffeerpc_server.py  tcp_server.py
tests/helpers/: coffeerpc.py  d.py  rpc_fixture.py
