[project]
name = "hobbyrpc"
version = "0.1.0"
description = "To make RPC clients and servers with Python"
readme = "README.md"
authors = [
    { name = "Anatoly Chernov", email = "chertoly@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hobby-client",
    "hobbyrpc-client",
    "pydantic>=2.13.4",
    "werkzeug>=3.1.8",
]

[project.scripts]
hobbyrpc = "hobbyrpc:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "gunicorn>=26.0.0",
    "pytest>=9.0.3",
    "pytest-xprocess>=1.0.2",
    "requests>=2.34.2",
]

[tool.uv.workspace]
members = [
    "packages/client",
    "packages/client2",
]

[tool.uv.sources]
hobby-client = { workspace = true, editable = true }
hobbyrpc-client = { workspace = true, editable = true }
