[project]
name = "hobbyrpc"
version = "0.1.0"
description = "To make RPC clients and servers with Python"
readme = "README.md"
authors = [
    { name = "Anatoly Chernov", email = "chertoly@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "werkzeug>=3.1.8",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "gunicorn>=26.0.0",
    "pytest>=9.0.3",
    "pytest-xprocess>=1.0.2",
    "requests>=2.34.2",
]
